src/components/HeadToHeadCard/HeadToHeadCard.module.css
.head-to-head-card {
  margin: 0 0 3.2rem 0;
}
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 0 1.2rem 0;
}
.game-text {
  display: inline;
  font-size: 2rem;
  line-height: 2.4rem;
  color: var(--lightgrey);
}
.game-letter {
  display: inline;
  font-size: 2rem;
  line-height: 2.4rem;
  color: var(--white);
  margin-left: 0.4rem;
}
.lock-icon {
  margin: 0 1.2rem 0 0;
}
.arrow-icon {
  margin: 0 1.5rem 0 0;
}
.country-card-container {
  border-radius: 1.4rem;
  padding: 0.4rem 0.4rem 0.4rem 0;
  background-color: var(--darkgrey);
  overflow: hidden;
}
.pip {
  position: absolute;
  right: 5.2rem;
}

